# parallelink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  work.md
.omc/: analysis_bottleneck.md  analysis_improvements.md  analysis_warp.md
docs/: design.md  performance.md
include/: bam_engine.h  gpu_engine.h  plink_admin_wire.h  plink_engine.h
patches/: bam-build-type.patch  bam-module-name-to-libnvm.patch  bam-use-latest-linux-kernel-api.patch  libnvme-plink-ioctl-hook.patch  nvme-cli-plink-ioctl-hook.patch
samples/: cuse_nvme_passthru.c
src/: bam_admin_cli.c  engine.c  gpu-engine.c  gpu_engine.c  gpu_worker.cu  holder.cu  plink_ioctl_hook.c
tests/: admin_smoke.sh
tools/: compare_random.cu  compare_random.py
